fix login modal on small screen

--- a/frontend/src/styles/karaokemugen.scss
+++ b/frontend/src/styles/karaokemugen.scss
@@ -1290,7 +1290,7 @@ input[type="text"]:focus, input[type="password"]:focus {
 	}
 }
 
-#nav-userlist {
+#nav-userlist,#nav-login {
 	max-height: calc(100vh - 200px);
 }
   
